# rust-gpt2

./: .gitignore  Cargo.toml  README.md
data/raw/: hello-world.txt
examples/: infer.rs  train.rs
scripts/: gpt2_download.py  gpt_download.py
src/: batcher.rs  config.rs  data.rs  dataset.rs  lib.rs  load.rs  main.rs  model.rs  tokenization.rs  tokenizer.rs  train.rs  utils.rs
src/data/: batcher.rs  dataset.rs
src/model/: attention.rs  gpt2.rs
