[package]
name = "rust-gpt2"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.18.0", features = ["dataset", "train", "autodiff", "candle", "tch"] }
burn-import = { version = "0.18.0", features = ["safetensors"] }
clap = { version = "4.5.48", features = ["derive"] }
rand = "0.9.2"
regex = "1.11.1"
tiktoken-rs = "0.7.0"
